# knapsack-Josie-El

./: Cargo.toml  README.md  RESULTS.md  script.sh
.cargo/: config.toml
Outputs/Oopsie/: output_1.txt  output_10.txt  output_12.txt  output_14.txt  output_15.txt  output_17.txt  output_18.txt  output_20.txt  output_22.txt  output_23.txt  output_24.txt  output_25.txt  output_26.txt  output_27.txt  output_28.txt  output_29.txt  output_3.txt  output_4.txt  output_5.txt  output_6.txt  output_8.txt  output_9.txt
Outputs/ts_2_pID_Big1/: output_1.txt  output_10.txt  output_11.txt  output_12.txt  output_13.txt  output_14.txt  output_15.txt  output_16.txt  output_17.txt  output_18.txt  output_19.txt  output_2.txt  output_20.txt  output_21.txt  output_22.txt  output_23.txt  output_24.txt  output_25.txt  output_26.txt  output_27.txt  output_28.txt  output_29.txt  output_3.txt  output_30.txt  output_4.txt  output_5.txt  output_6.txt  output_7.txt  output_8.txt  output_9.txt
Outputs/ts_2_pID_Big2/: output_1.txt  output_10.txt  output_11.txt  output_12.txt  output_13.txt  output_14.txt  output_15.txt  output_16.txt  output_17.txt  output_18.txt  output_19.txt  output_2.txt  output_20.txt  output_21.txt  output_22.txt  output_23.txt  output_24.txt  output_25.txt  output_26.txt  output_27.txt  output_28.txt  output_29.txt  output_3.txt  output_30.txt  (+6 more)
knapsacks/: BigProblem1.txt  BigProblem2.txt  BigProblem3.txt  BigProblem4.txt  SmallProblem1.txt  SmallProblem2.txt  SmallProblem3.txt  SmallProblem4.txt
src/: cliff_score.rs  cliff_scorer.rs  item.rs  knapsack.rs  main.rs
(+420 files in other folders)
